# dreamspell

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  readme.md
apps/dreamadmin/: Cargo.toml
apps/dreamadmin/configs/: dreamadmin.service
apps/dreamadmin/src/: auth.rs  main.rs  templates.rs  views.rs
apps/dreamadmin/static/css/: admin.css
apps/dreamadmin/templates/: admin.html  castle.html  form.html  layout.html  login.html  seal.html  seal_detail.html
apps/dreambot/: Cargo.toml  readme.md
apps/dreambot/configs/: dreambot.service
apps/dreambot/src/: db.rs  main.rs
apps/dreamspell/: Cargo.toml
apps/dreamspell/configs/: dreamspell.conf  dreamspell.service
apps/dreamspell/src/: main.rs  templates.rs  views.rs
apps/dreamspell/static/css/: cover.css
apps/dreamspell/templates/: home.html  home.html.backup  home_en.html  howto.html  howto_en.html  oferta.html  oferta_en.html  result.html  result_en.html
apps/dreamspell/templates/admin/: base_admin.html  login.html
apps/dreamspell/templates/site/: howto_en.html  result.html  result_en.html
apps/tzolkin/: Cargo.toml
apps/tzolkin/src/: db.rs  error.rs
lib/castle/: Cargo.toml
lib/castle/src/: lib.rs
lib/tzolkin/: Cargo.toml
lib/tzolkin/src/: calculator.rs  db.rs  lib.rs  tables.rs  tzolkin.rs
resources/: front  front_en  seals.json  seals_en.json
scripts/: deploy.sh  install-services.sh
src/: auth.rs  config.rs  cors.rs  descriptions.rs  error.rs  main.rs  tables.rs  templates.rs  tzolkin.rs  views.rs
templates/: base.html  base.html.tera  home.html  home.html.tera  home_en.html  result.html  result_en.html
templates/site/: base_site.html  home.html  home_en.html  oferta_en.html  result.html  result_en.html
