[package]
name = "dreamspell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4"}
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

askama = "0.14.0"
# axum-login = "0.18.0"

# axum = { version = "0.6", features = ["multipart"] }
# axum_typed_multipart = "0.3.4"
# axum-login = "0.5"
# chrono = "0.4.26"
# tower-http = { version = "0.4", features = ["fs", "limit"] }
# rand = { version = "0.8", features = ["min_const_gen"] }
# sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
