[workspace]
members = [
    "lib/tzolkin",
    "apps/dreamspell",
    "apps/dreambot",
    "apps/dreamadmin",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# Bot-specific dependencies
teloxide = { version = "0.17.0", features = ["macros", "sqlite-storage-nativetls"] }
log = "0.4"
pretty_env_logger = "0.5"

# Admin-specific dependencies
axum-login = "0.18"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
time = "0.3"
