[workspace]
members = [
    "lib/tzolkin",
    "apps/dreamspell",
    "apps/dreambot",
    "apps/dreamadmin",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Denis K. <konsistentsi@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenvy = "0.15"

# Web dependencies
axum = "0.8"
askama = "0.14"
tower-http = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bot dependencies
teloxide = { version = "0.17.0", features = ["macros", "sqlite-storage-nativetls"] }
log = "0.4"
pretty_env_logger = "0.5"

# Admin dependencies
axum-login = "0.18"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
time = "0.3"
