[package]
name = "dreamadmin"
version.workspace = true
edition.workspace = true

[dependencies]
tzolkin = { path = "../../lib/tzolkin" }
axum = { workspace = true }
axum-login = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs", "limit"] }
tower-sessions-sqlx-store = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true, features = ["time"] }
dotenvy = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }