[package]
name = "dreambot"
version.workspace = true
edition.workspace = true

[dependencies]
tzolkin = { path = "../../lib/tzolkin" }
tokio = { workspace = true, features = ["macros"] }
teloxide = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }