[package]
name = "dreamspell"
version.workspace = true
edition.workspace = true

[dependencies]
tzolkin = { path = "../../lib/tzolkin" }
askama = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }